# Turtlebackend

./: .gitignore  Cargo.toml  Dockerfile
crates/database/: Cargo.toml
crates/database/src/: basic_db.rs  lib.rs
crates/net/: Cargo.toml
crates/net/src/: community.rs  lib.rs  profile.rs  router.rs  server.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/service/src/parser/: community.rs  mod.rs  profile.rs
