[package]
name = "turtle-net"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true 
tokio.workspace =  true
tower = {version = "0.5.2"}
tower-http = { version = "0.5.2", features = ["cors"] }
turtle-database.workspace = true
turtle-service.workspace = true
serde_json = "1.0.140"
tempfile = "3.17.1"
serde = { version = "1.0.218", features = ["derive"] }